tests/ui/generics/slightly-nice-generic-literal-messages.stderr
error[E0308]: mismatched types
  --> $DIR/slightly-nice-generic-literal-messages.rs:7:9
   |
LL |     match Foo(1.1, marker::PhantomData) {
   |           ----------------------------- this expression has type `Foo<{float}, _>`
LL |         1 => {}
   |         ^ expected `Foo<{float}, _>`, found integer
   |
   = note: expected struct `Foo<{float}, _>`
                found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
